[package]
name = "breadcrumbs"
version = "0.1.0"
edition = "2021"
authors = ["Michael Reeves <linux479@duck.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]