[package]
name = "breadcrumbs"
version = "0.1.5"
edition = "2021"
authors = ["Michael Reeves <linux479@duck.com>"]
license = "Apache-2.0"
repository = "https://github.com/IntegralPilot/breadcrumbs-rs"
categories = ["development-tools::debugging"]
readme = "README.md"
documentation = "https://docs.rs/breadcrumbs"
description = "A beautiful, tiny traceback and logging library supporting #![no_std] rust."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9.8"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
